<resources>
    <string name="security_and_privacy">安全与隐私</string>
    <string name="search_me_set">可以通过以下方式搜索好友</string>
    <string name="search_by_phone">允许手机号搜索</string>
    <string name="search_by_id">允许%s号搜索</string>
    <string name="close_search_tips">关闭后，其他用户将不能通过上述信息搜索好友</string>
    <string name="login_pwd">登录密码</string>
    <string name="check_login_pwd">验证您的登录密码</string>
    <string name="check_login_pwd_desc">请确认您的登录密码后，在设定6位数字密码的聊天密码</string>
    <string name="hint_login_pwd">请输入登录密码</string>
    <string name="hint_chat_pwd">请输入6位数字聊天密码</string>
    <string name="hint_chat_pwd_again">再次输入6位数字聊天密码</string>
    <string name="chat_pwd_two_passwords_do_not_match">两次聊天密码不一致</string>
    <string name="chat_pwd">聊天密码</string>
    <string name="screen_saver">屏幕保护</string>
    <string name="lock_screen_password">锁屏密码</string>
    <string name="disconnected_screen_saver">断网屏保</string>
    <string name="update_lock_screen_pwd">修改锁屏密码</string>
    <string name="close_lock_screen_pwd">关闭锁屏密码</string>
    <string name="close_lock_screen_pwd_tips">确定关闭锁屏密码吗？</string>
    <string name="disable_screenshot">禁止截屏</string>
    <string name="disable_screenshot_desc">开启后，不可在应用内截屏或录制屏幕</string>
    <string name="device_status_open">已开启</string>
    <string name="device_status_close">已关闭</string>
    <string name="destroy_account">注销账号</string>
    <string name="device_lock">设备锁</string>
    <string name="black_list">黑名单</string>
    <string name="setting_chat_pwding">设置中</string>
    <string name="illustration_for_log_off">账号注销是不可恢复的操作，请您仔细考虑，谨慎操作，操作前务必审慎阅读、充分理解以下内容。</string>
    <string name="notice_for_log_off">注销须知:</string>
    <string name="notice_1">账号处于安全状态：\n您的账号未被他人盗取，账号不存在被封禁等风险。</string>
    <string name="notice_2">全部财产均已结清：\n账号内不存在已充值的相关财产。</string>
    <string name="notice_3">绑定目前可用的安全手机：\n用于确认当前账号的身份归属情况。</string>
    <string name="notice_4">账号注销申请时即放弃该账号在%s软件所有涉及相关数据，包括但不限于该账号的资产、权益、记录等一切内容，将视为您自愿放弃。</string>
    <string name="notice_5">账号成功注销后，您将无法登录。</string>
    <string name="notice_6">已成功注销的账号无法进行找回。</string>
    <string name="btn_agree_privacy">轻按下方“注销账号”按钮，即表示您已阅读并同意</string>
    <string name="special_notes">特别说明:</string>
    <string name="input_screen_pwd">请输入锁屏密码</string>
    <string name="input_again_screen_pwd">确认锁屏密码</string>
    <string name="the_two_passwords_are_inconsistent">两次密码不一致</string>
    <string name="forge_lock_screen_pwd">忘记密码</string>
    <string name="lock_screen_pwd_err">密码错误</string>
    <string name="disconnect_screen_saver_tips">网络已断开，请连接网络</string>
    <string name="disconnect_timing">断网计时:</string>
    <string name="protect_account_security">全力保护您的信息安全</string>
    <string name="auto_lock">自动锁定</string>
    <string name="now">立即</string>
    <string name="leaving_1">离开1分钟后</string>
    <string name="leaving_5">离开5分钟后</string>
    <string name="leaving_30">离开30分钟后</string>
    <string name="leaving_60">离开1小时后</string>
    <string name="lock_screen_pwd_err_and_exit">解锁密码错误，还可以再输入 %d 次</string>
    <string name="clear_lock_pwd">确定后将会清除现有的解锁密码，如需继续使用，请重新设置</string>
    <string name="recapture">重新获取</string>
    <string name="get_verf_code">获取验证码</string>
    <string name="hint_verfi">请输入验证码</string>
    <string name="device_manage">设备锁</string>
    <string name="auth_by_login_device">通过登录验证的设备</string>
    <string name="delete_device">删除设备</string>
    <string name="device_lock_desc">开启设备锁可以保障%s账号安全。在未验证的设备上进行登录操作时，需要验证手机号码，即使密码泄露他人也无法登录。</string>
    <string name="last_login_time">最后一次登录时间：%s，是否要删除该设备</string>
</resources>