<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeColor"
    android:orientation="vertical">

    <include layout="@layout/wk_title_bar_layout" />

    <LinearLayout
        android:id="@+id/chooseTimeLayout"
        style="@style/layoutBg"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/leftTextView"
            android:text="@string/auto_lock" />

        <TextView
            android:text="@string/now"
            android:id="@+id/lockTimeTv"
            android:layout_width="0dp"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/font_size_16" />

        <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/updateLayout"
        style="@style/layoutBg">

        <TextView
            style="@style/leftTextView"
            android:text="@string/update_lock_screen_pwd" />

        <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv" />
    </LinearLayout>

    <TextView
        android:id="@+id/closeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/layout_bg"
        android:padding="15dp"
        android:text="@string/close_lock_screen_pwd"
        android:textColor="@color/red" />
</LinearLayout>