<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeColor"
    android:orientation="vertical">

    <include layout="@layout/wk_title_bar_layout" />

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/homeColor"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <View style="@style/view_line_15" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/homeColor"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="5dp"
                        android:text="@string/search_me_set" />

                    <LinearLayout style="@style/layoutBgPaddingSmall">

                        <TextView
                            style="@style/leftTextView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/search_by_phone" />

                        <com.chat.base.ui.components.SwitchView
                            android:id="@+id/phoneSwitch"
                            android:layout_width="45dp"
                            android:layout_height="40dp"
                            android:checked="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/searchWithPhoneLayout"
                        style="@style/layoutBgPaddingSmall">

                        <TextView
                            android:id="@+id/searchIdTv"
                            style="@style/leftTextView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/search_by_id" />

                        <com.chat.base.ui.components.SwitchView
                            android:id="@+id/idSwitch"
                            android:layout_width="45dp"
                            android:layout_height="40dp"
                            android:checked="true" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/homeColor"
                        android:paddingStart="15dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="5dp"
                        android:text="@string/close_search_tips" />

                    <View style="@style/view_line_15" />

                    <LinearLayout
                        android:id="@+id/loginPwdLayout"
                        style="@style/layoutBg">

                        <TextView
                            style="@style/leftTextView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/login_pwd" />

                        <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/chatPwdLayout"
                        style="@style/layoutBg">

                        <TextView
                            style="@style/leftTextView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/chat_pwd" />

                        <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/commonPrivacyLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/homeColor"
                        android:paddingStart="15dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="5dp"
                        android:text="@string/screen_saver" />

                    <LinearLayout
                        android:id="@+id/lockScreenPasswordLayout"
                        style="@style/layoutBg">

                        <TextView
                            style="@style/leftTextView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/lock_screen_password" />

                        <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/disconnectedScreenSaverLayout"
                        style="@style/layoutBgPaddingSmall">

                        <TextView
                            style="@style/leftTextView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/disconnected_screen_saver" />


                        <com.chat.base.ui.components.SwitchView
                            android:id="@+id/disconnectedSwitch"
                            android:layout_width="45dp"
                            android:layout_height="40dp"
                            android:checked="true" />
                    </LinearLayout>

                    <LinearLayout style="@style/layoutBgPaddingSmall">

                        <TextView
                            style="@style/leftTextView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/disable_screenshot" />


                        <com.chat.base.ui.components.SwitchView
                            android:id="@+id/screenshotSwitchView"
                            android:layout_width="45dp"
                            android:layout_height="40dp"
                            android:checked="false" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/homeColor"
                        android:paddingStart="15dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="5dp"
                        android:text="@string/disable_screenshot_desc" />

                    <View style="@style/view_line_15" />


                    <LinearLayout
                        android:id="@+id/deviceLayout"
                        style="@style/layoutBg">

                        <TextView
                            style="@style/leftTextView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/device_lock" />

                        <TextView
                            android:id="@+id/deviceStatusTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="10dp"
                            android:text="@string/device_status_close"
                            android:textColor="@color/color999"
                            android:textSize="14sp" />

                        <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv" />
                    </LinearLayout>

                    <View style="@style/view_line_15" />

                    <LinearLayout
                        android:id="@+id/blackListLayout"
                        style="@style/layoutBg">

                        <TextView
                            style="@style/leftTextView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/black_list" />

                        <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/destroyAccountLayout"
                        style="@style/layoutBg">

                        <TextView
                            style="@style/leftTextView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/destroy_account" />

                        <androidx.appcompat.widget.AppCompatImageView style="@style/arrow_right_iv" />
                    </LinearLayout>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
</LinearLayout>