<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeColor"
    android:orientation="vertical">

    <include layout="@layout/wk_title_bar_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/destroy_account"
                    android:textColor="@color/colorDark"
                    android:textSize="@dimen/font_size_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text=":"
                    android:textColor="@color/colorDark"
                    android:textSize="@dimen/font_size_20" />

                <TextView
                    android:id="@+id/tv_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="11111****111"
                    android:textColor="@color/reminderColor"
                    android:textSize="@dimen/font_size_20" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="9dp"
                android:text="@string/illustration_for_log_off"
                android:textColor="@color/colorDark"
                android:textSize="@dimen/font_size_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/notice_for_log_off"
                android:textColor="#ff929197"
                android:textSize="@dimen/font_size_18" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/red_bg"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/notice_1"
                    android:textColor="@color/color999"
                    android:textSize="@dimen/font_size_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/red_bg"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/notice_2"
                    android:textColor="@color/color999"
                    android:textSize="@dimen/font_size_16" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/red_bg"
                    android:gravity="center"
                    android:text="3"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/notice_3"
                    android:textColor="@color/color999"
                    android:textSize="@dimen/font_size_16" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/special_notes"
                android:textColor="@color/color999"
                android:textSize="@dimen/font_size_18" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1、"
                    android:textColor="@color/color999"
                    android:textSize="@dimen/font_size_16" />

                <TextView
                    android:id="@+id/noticeTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/notice_4" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2、"
                    android:textColor="@color/color999"
                    android:textSize="@dimen/font_size_16" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/notice_5" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3、"
                    android:textColor="@color/color999"
                    android:textSize="@dimen/font_size_16" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/notice_6" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/close_account_user_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:text="@string/btn_agree_privacy"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/font_size_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logOffBtn"
                style="@style/buttonNormal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/destroy_account"
                app:cornerRadius="@dimen/button_radian" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelBtn"
                style="@style/buttonNormal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                app:cornerRadius="@dimen/button_radian" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>