<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/wk_title_bar_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layoutColor"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/check_login_pwd"
                android:textColor="@color/colorDark"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/check_login_pwd_desc"
                android:textColor="@color/color999"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/loginPwdEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/hint_login_pwd"
                    android:inputType="textPassword"
                    android:minHeight="40dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp" />

                <View style="@style/view_line" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/chatPwdEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/transparent"
                    android:hint="@string/hint_chat_pwd"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:minHeight="40dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp" />

                <View style="@style/view_line" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/chatPwdEtAgain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/transparent"
                    android:hint="@string/hint_chat_pwd_again"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:minHeight="40dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorDark"
                    android:textSize="16sp" />

                <View style="@style/view_line" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitBtn"
                style="@style/buttonNormal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:alpha="0.2"
                app:cornerRadius="@dimen/button_radian"
                android:enabled="false"
                android:text="@string/sure" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>