<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/homeColor"
    android:orientation="vertical">

    <include layout="@layout/wk_title_bar_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/homeColor"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deviceLockDescTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:text="@string/device_lock_desc"
                android:textColor="@color/color999" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white">

                <LinearLayout style="@style/layoutBgPaddingSmall">

                    <TextView
                        style="@style/leftTextView"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/device_lock" />

                    <com.chat.base.ui.components.SwitchView
                        android:id="@+id/deviceSwitchView"
                        android:layout_width="45dp"
                        android:layout_height="40dp"
                        android:checked="true" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/deviceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/auth_by_login_device"
                    android:textColor="@color/color999" />

                <com.scwang.smart.refresh.layout.SmartRefreshLayout
                    android:id="@+id/refreshLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    app:srlEnableFooterFollowWhenLoadFinished="true"
                    app:srlEnableScrollContentWhenLoaded="true">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:visibility="visible" />

                    <com.scwang.smart.refresh.footer.ClassicsFooter
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/homeColor"
                        app:srlTextNothing="@string/refresh_footer" />
                </com.scwang.smart.refresh.layout.SmartRefreshLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>